--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="author" content="Reptilian VladeoZ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/reptgames.css">
-    <link rel="icon" type="image/x-icon" href="/website-icon.png">
+    <link rel="stylesheet" href="/reptilian-games/reptgames.css">
+    <link rel="icon" type="image/x-icon" href="/reptilian-games/website-icon.png">
     <title>Home - Reptilian Games</title>
   </head>
   <body>
     <div>
       <video autoplay muted loop id="backgroundVideo">
-        <source src="/background-video.webm" type="video/webm">
+        <source src="/reptilian-games/background-video.webm" type="video/webm">
       </video>
     </div>
     <div class="content">
-      <header><img id="title-logo" src="/site-logo-lower-res.webp">
+      <header><img id="title-logo" src="/reptilian-games/site-logo-lower-res.webp">
       <nav class="nav-tabs">
-        <a class="navigation active-nav" href="/index.html">Home</a>
-        <a class="navigation" href="/portfolio-posts/portfolio.html">Portfolio</a>
-        <a class="navigation" href="/personal-projects/personal-projects.html">Personal Projects</a>
-        <a class="navigation" href="/about.html">About Me</a>
+        <a class="navigation active-nav" href="/reptilian-games/index.html">Home</a>
+        <a class="navigation" href="/reptilian-games/portfolio-posts/portfolio.html">Portfolio</a>
+        <a class="navigation" href="/reptilian-games/personal-projects/personal-projects.html">Personal Projects</a>
+        <a class="navigation" href="/reptilian-games/about.html">About Me</a>
       </nav>
 </header>
 <main class="content-panel">
@@ -28,16 +28,16 @@
         <section class="content-block">
           <h1 style="padding-left: 10px;">Most recent works from TechArt portfolio</h1>
           <div class="display-case">
-            <a href="/portfolio-posts/master-material/material-works.html">
+            <a href="/reptilian-games/portfolio-posts/master-material/material-works.html">
               <div>
-                <img src="/portfolio-posts/master-material/thumbnails/1_animated_thumbnail.webp" alt="Master Material">
+                <img src="/reptilian-games/portfolio-posts/master-material/thumbnails/1_animated_thumbnail.webp" alt="Master Material">
                 <h2>City Props Master Material</h2>
                 <hr>
                 <p> Showcase of creating a master material for city props in UE<br> as well as some extra material effects</p>
               </div>
             </a>
           </div>
-          <div class="display-case-link"><a href="/portfolio-posts/portfolio.html"><p style="margin-top: 0;">All Portfolio works here</p></a></div>
+          <div class="display-case-link"><a href="/reptilian-games/portfolio-posts/portfolio.html"><p style="margin-top: 0;">All Portfolio works here</p></a></div>
         </section>
         <hr class="block-separator">
         <section class="content-block">
@@ -45,7 +45,7 @@
           <div class="display-case">
             <a href="https://modworkshop.net/mod/49518" target="_blank">
               <div>
-                <img src="/personal-projects/images/tas12-thumbnail.webp" alt="thumbnail with a modded gun for Payday 3">
+                <img src="/reptilian-games/personal-projects/images/tas12-thumbnail.webp" alt="thumbnail with a modded gun for Payday 3">
                 <p>Mod: Folded foldable stock for TAS-12 (SPAS-12) shotgun</p>
                 <hr>
                 <p><span>Game: PAYDAY 3</span></p>
@@ -53,7 +53,7 @@
             </a>
             <a href="https://modworkshop.net/mod/48781" target="_blank">
               <div>
-                <img src="/personal-projects/images/blackberry-mod-banner.webp" alt="thumbnail with blackberry phone for Payday 3">
+                <img src="/reptilian-games/personal-projects/images/blackberry-mod-banner.webp" alt="thumbnail with blackberry phone for Payday 3">
                 <p>Mod: Replaces in-game smartphone with a Blackberry phone</p>
                 <hr>
                 <p><span>Game: PAYDAY 3</span></p>
@@ -61,18 +61,18 @@
             </a>
             <a href="https://modworkshop.net/mod/46663" target="_blank">
               <div>
-                <img src="/personal-projects/images/pd-titles-thumbnail.webp" alt="thumbnail with 4 different logo variants for Payday 3">
+                <img src="/reptilian-games/personal-projects/images/pd-titles-thumbnail.webp" alt="thumbnail with 4 different logo variants for Payday 3">
                 <p>Mod: My redesigns of Payday 3 title logo</p>
                 <hr>
                 <p><span>Game: PAYDAY 3</span></p>
               </div>
             </a>
           </div>
-          <div class="display-case-link"><a href="/personal-projects/personal-projects.html"><p style="margin-top: 0;">All personal projects here</p></a></div>
+          <div class="display-case-link"><a href="/reptilian-games/personal-projects/personal-projects.html"><p style="margin-top: 0;">All personal projects here</p></a></div>
         </section>
         <hr class="block-separator">
         <h1>Who the hell am I?</h1>
-        <div class="display-case-link"><a href="/about.html" style="margin-left: 0;"><p style="margin-top: 0; font-size: 20px;">About me here!</p></a></div>
+        <div class="display-case-link"><a href="/reptilian-games/about.html" style="margin-left: 0;"><p style="margin-top: 0; font-size: 20px;">About me here!</p></a></div>
       </main>
       <footer>
         © Reptilian VladeoZ 2025<br>
