--- a/portfolio-posts/master-material/material-works.html
+++ b/portfolio-posts/master-material/material-works.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="author" content="Reptilian VladeoZ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/reptgames.css">
-  <link rel="icon" type="image/x-icon" href="/website-icon.png">
+  <link rel="stylesheet" href="/reptilian-games/reptgames.css">
+  <link rel="icon" type="image/x-icon" href="/reptilian-games/website-icon.png">
   <script src="/scripts.js"></script>
   <title>Material Works - Reptilian Games</title>
 </head>
@@ -14,23 +14,23 @@
 <body>
   <div>
     <video autoplay muted loop id="backgroundVideo">
-      <source src="/background-video.webm" type="video/webm">
+      <source src="/reptilian-games/background-video.webm" type="video/webm">
     </video>
   </div>
   <div class="content">
-    <header><img id="title-logo" src="/site-logo-lower-res.webp">
+    <header><img id="title-logo" src="/reptilian-games/site-logo-lower-res.webp">
       <nav class="nav-tabs">
-        <a class="navigation" href="/index.html">Home</a>
-        <a class="navigation active-nav" href="/portfolio-posts/portfolio.html">Portfolio</a>
-        <a class="navigation" href="/personal-projects/personal-projects.html">Personal Projects</a>
-        <a class="navigation" href="/about.html">About Me</a>
+        <a class="navigation" href="/reptilian-games/index.html">Home</a>
+        <a class="navigation active-nav" href="/reptilian-games/portfolio-posts/portfolio.html">Portfolio</a>
+        <a class="navigation" href="/reptilian-games/personal-projects/personal-projects.html">Personal Projects</a>
+        <a class="navigation" href="/reptilian-games/about.html">About Me</a>
       </nav>
     </header>
     <main class="content-panel">
       <h1><b>Master Material for props in a city environment</b><br><sup style="font-size: 18px;">and some extra
           material effects</sup></h1>
       <hr>
-      <p style="font-size: 14px; float: right; text-align: right;"><i>Published: 2025-03-27 19:00 CET</i></p><!--replace with actual date and time-->
+      <p style="font-size: 14px; float: right; text-align: right;"><i>Published: 2025-03-28 1:00 CET</i></p>
       <p style="font-size: 14px; margin-bottom: 8px;"><i>Work was done in a default EGS version of Unreal Engine
           5.5.4</i></p>
       <article class="content-block">
