--- a/personal-projects/personal-projects.html
+++ b/personal-projects/personal-projects.html
@@ -15,7 +15,7 @@
       </video>
     </div>
     <div class="content">
-      <header><img id="title-logo" src="/site-logo-lower-res.webp">
+      <header><img id="title-logo" src="/reptilian-games/site-logo-lower-res.webp">
       <nav class="nav-tabs">
         <a class="navigation" href="/reptilian-games/index.html">Home</a>
         <a class="navigation" href="/reptilian-games/portfolio-posts/portfolio.html">Portfolio</a>
