--- a/portfolio-posts/master-material/material-works.html
+++ b/portfolio-posts/master-material/material-works.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/reptilian-games/reptgames.css">
   <link rel="icon" type="image/x-icon" href="/reptilian-games/website-icon.png">
-  <script src="/scripts.js"></script>
+  <script src="/reptilian-games/scripts.js"></script>
   <title>Material Works - Reptilian Games</title>
 </head>
 
