--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="author" content="Reptilian VladeoZ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Home - Reptilian Games" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://reptvlad.github.io/reptilian-games/" />
+    <meta property="og:image" content="https://reptvlad.github.io/reptilian-games/site-logo-lower-res.webp" />
+    <meta property="og:description" content="Home page for Reptilian Games." />
     <link rel="stylesheet" href="/reptilian-games/reptgames.css">
     <link rel="icon" type="image/x-icon" href="/reptilian-games/website-icon.png">
     <title>Home - Reptilian Games</title>
