--- a/about.html
+++ b/about.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta name="author" content="Reptilian VladeoZ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/reptilian-games/reptgames.css">
-    <link rel="icon" type="image/x-icon" href="/reptilian-games/website-icon.png">
+    <link rel="stylesheet" href="/reptgames.css">
+    <link rel="icon" type="image/x-icon" href="/website-icon.png">
     <title>About Me - Reptilian Games</title>
   </head>
   <body>
     <div>
       <video autoplay muted loop id="backgroundVideo">
-        <source src="/reptilian-games/background-video.webm" type="video/webm">
+        <source src="/background-video.webm" type="video/webm">
       </video>
     </div>
     <div class="content">
-      <header><img id="title-logo" src="/reptilian-games/site-logo-lower-res.webp" alt="Reptilian Games website logo">
+      <header><img id="title-logo" src="/site-logo-lower-res.webp" alt="Reptilian Games website logo">
       <nav class="nav-tabs">
-        <a class="navigation" href="/reptilian-games/index.html">Home</a>
-        <a class="navigation" href="/reptilian-games/portfolio-posts/portfolio.html">Portfolio</a>
-        <a class="navigation" href="/reptilian-games/personal-projects/personal-projects.html">Personal Projects</a>
-        <a class="navigation active-nav" href="/reptilian-games/about.html">About Me</a>
+        <a class="navigation" href="/index.html">Home</a>
+        <a class="navigation" href="/portfolio-posts/portfolio.html">Portfolio</a>
+        <a class="navigation" href="/personal-projects/personal-projects.html">Personal Projects</a>
+        <a class="navigation active-nav" href="/about.html">About Me</a>
       </nav>
 </header>
 <main class="content-panel">
         <section>
           <article id="about-me">
-            <img id="profile-pic" src="/reptilian-games/profile-pic.webp" alt="Profile pic of me, Reptilian VladeoZ (in a mask, cause I ain't sharing my real face on the net just yet)">
+            <img id="profile-pic" src="/profile-pic.webp" alt="Profile pic of me, Reptilian VladeoZ (in a mask, cause I ain't sharing my real face on the net just yet)">
             <h2>A "ME" Section!</h2>
             <p>That's me, Reptilian VladeoZ! You are currently on my website, thanks for visiting!</p>
             <br>
