--- a/portfolio-posts/portfolio.html
+++ b/portfolio-posts/portfolio.html
@@ -5,24 +5,24 @@
   <meta charset="UTF-8">
   <meta name="author" content="Reptilian VladeoZ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/reptilian-games/reptgames.css">
-  <link rel="icon" type="image/x-icon" href="/reptilian-games/website-icon.png">
+  <link rel="stylesheet" href="/reptgames.css">
+  <link rel="icon" type="image/x-icon" href="/website-icon.png">
   <title>Portfolio - Reptilian Games</title>
 </head>
 
 <body>
   <div>
     <video autoplay muted loop id="backgroundVideo">
-      <source src="/reptilian-games/background-video.webm" type="video/webm">
+      <source src="/background-video.webm" type="video/webm">
     </video>
   </div>
   <div class="content">
-    <header><img id="title-logo" src="/reptilian-games/site-logo-lower-res.webp">
+    <header><img id="title-logo" src="/site-logo-lower-res.webp">
       <nav class="nav-tabs">
-        <a class="navigation" href="/reptilian-games/index.html">Home</a>
-        <a class="navigation active-nav" href="/reptilian-games/portfolio-posts/portfolio.html">Portfolio</a>
-        <a class="navigation" href="/reptilian-games/personal-projects/personal-projects.html">Personal Projects</a>
-        <a class="navigation" href="/reptilian-games/about.html">About Me</a>
+        <a class="navigation" href="/index.html">Home</a>
+        <a class="navigation active-nav" href="/portfolio-posts/portfolio.html">Portfolio</a>
+        <a class="navigation" href="/personal-projects/personal-projects.html">Personal Projects</a>
+        <a class="navigation" href="/about.html">About Me</a>
       </nav>
 </header>
 <main class="content-panel">
@@ -30,9 +30,9 @@
         <section class="content-block">
           <h1 style="padding-left: 10px;">My TechArt portfolio works</h1>
           <div class="display-case">
-            <a href="/reptilian-games/portfolio-posts/master-material/material-works.html">
+            <a href="/portfolio-posts/master-material/material-works.html">
               <div>
-                <img src="/reptilian-games/portfolio-posts/master-material/thumbnails/1_animated_thumbnail.webp" alt="Master Material">
+                <img src="/portfolio-posts/master-material/thumbnails/1_animated_thumbnail.webp" alt="Master Material">
                 <h2>City Props Master Material</h2>
                 <hr>
                 <p> Showcase of creating a master material for city props in UE<br> as well as some extra material
