--- a/personal-projects/personal-projects.html
+++ b/personal-projects/personal-projects.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="author" content="Reptilian VladeoZ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/reptilian-games/reptgames.css">
-    <link rel="icon" type="image/x-icon" href="/reptilian-games/website-icon.png">
+    <link rel="stylesheet" href="/reptgames.css">
+    <link rel="icon" type="image/x-icon" href="/website-icon.png">
     <title>Personal Projects - Reptilian Games</title>
   </head>
   <body>
     <div>
       <video autoplay muted loop id="backgroundVideo">
-        <source src="/reptilian-games/background-video.webm" type="video/webm">
+        <source src="/background-video.webm" type="video/webm">
       </video>
     </div>
     <div class="content">
-      <header><img id="title-logo" src="/reptilian-games/site-logo-lower-res.webp">
+      <header><img id="title-logo" src="/site-logo-lower-res.webp">
       <nav class="nav-tabs">
-        <a class="navigation" href="/reptilian-games/index.html">Home</a>
-        <a class="navigation" href="/reptilian-games/portfolio-posts/portfolio.html">Portfolio</a>
-        <a class="navigation active-nav" href="/reptilian-games/personal-projects/personal-projects.html">Personal Projects</a>
-        <a class="navigation" href="/reptilian-games/about.html">About Me</a>
+        <a class="navigation" href="/index.html">Home</a>
+        <a class="navigation" href="/portfolio-posts/portfolio.html">Portfolio</a>
+        <a class="navigation active-nav" href="/personal-projects/personal-projects.html">Personal Projects</a>
+        <a class="navigation" href="/about.html">About Me</a>
       </nav>
 </header>
 <main class="content-panel">
