Testing the theme color and bigger image for embed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:url" content="https://reptilian.games/" />
     <meta property="og:image" content="https://reptilian.games/site-logo-lower-res.webp" />
     <meta property="og:description" content="Home page for Reptilian Games." />
+    <meta name="theme-color" content="#7e00fe">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="/reptgames.css">
     <link rel="icon" type="image/x-icon" href="/website-icon.png">
     <title>Home - Reptilian Games</title>
