--- a/about.html
+++ b/about.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="author" content="Reptilian VladeoZ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="About Me - Reptilian Games" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://reptilian.games/" />
+    <meta property="og:image" content="https://reptilian.games/site-logo-lower-res.webp" />
+    <meta property="og:description" content="I'm Reptilian VladeoZ and this is info about me." />
+    <meta name="theme-color" content="#7e00fe">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="/reptgames.css">
     <link rel="icon" type="image/x-icon" href="/website-icon.png">
     <title>About Me - Reptilian Games</title>
