--- a/portfolio-posts/portfolio.html
+++ b/portfolio-posts/portfolio.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8">
   <meta name="author" content="Reptilian VladeoZ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portfolio - Reptilian Games" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://reptilian.games/" />
+  <meta property="og:image" content="https://reptilian.games/site-logo-lower-res.webp" />
+  <meta property="og:description" content="My TechArt works for portfolio." />
+  <meta name="theme-color" content="#7e00fe">
+  <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="/reptgames.css">
   <link rel="icon" type="image/x-icon" href="/website-icon.png">
   <title>Portfolio - Reptilian Games</title>
