Adding a new page with my old art, adding new links to the about me page

--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
         <a class="navigation" href="/index.html">Home</a>
         <a class="navigation" href="/portfolio-posts/portfolio.html">Portfolio</a>
         <a class="navigation" href="/personal-projects/personal-projects.html">Personal Projects</a>
+        <a class="navigation" href="/artworks.html">Artworks</a>
         <a class="navigation active-nav" href="/about.html">About Me</a>
       </nav>
 </header>
@@ -57,6 +58,9 @@
             <h2>Where you can find me on the nets:</h2>
             <ul id="social-media-links" style="text-indent: 10px; font-size: 16px; list-style-type: none;">
               <li><a href="https://bsky.app/profile/reptilianvladeoz.bsky.social" target="_blank">BlueSky</a> profile</li>
+              <li><a href="mailto:reptilian.vladeoz@reptilian.games" target="_blank">E-Mail</a> if you don't feel like using DMs on social media (or have a business inquiry)</li>
+              <li><a href="https://ko-fi.com/reptvlad" target="_blank">Ko-fi</a> - I would always appreciate a donation, if you like what I do!</li>
+              <li><a href="https://www.artstation.com/reptvlad" target="_blank">ArtStation</a> profile (mostly just old works in there)</li>
               <li><a href="https://www.youtube.com/@ReptVlad" target="_blank">YouTube</a> profile (maybe I'll start releasing videos one day lmao)</li>
               <li><a href="https://www.twitch.tv/reptvlad" target="_blank">Twitch</a> profile (maybe I'll start streaming one day lmao)</li>
               <li><a href="https://t.me/Reptilian_VladeoZ" target="_blank">Telegram</a> profile (more for visibility, DMs from anyone who isn't a contact is restricted)</li>
