--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a class="navigation active-nav" href="/index.html">Home</a>
         <a class="navigation" href="/portfolio-posts/portfolio.html">Portfolio</a>
         <a class="navigation" href="/personal-projects/personal-projects.html">Personal Projects</a>
+        <a class="navigation" href="/artworks.html">Artworks</a>
         <a class="navigation" href="/about.html">About Me</a>
       </nav>
 </header>
@@ -46,7 +47,8 @@
           </div>
           <div class="display-case-link"><a href="/portfolio-posts/portfolio.html"><p style="margin-top: 0;">All Portfolio works here</p></a></div>
         </section>
-        <hr class="block-separator">
+        <br>
+        <hr>
         <section class="content-block">
           <h1 style="padding-left: 10px;">Most recent personal projects and things</h1>
           <div class="display-case">
@@ -77,7 +79,8 @@
           </div>
           <div class="display-case-link"><a href="/personal-projects/personal-projects.html"><p style="margin-top: 0;">All personal projects here</p></a></div>
         </section>
-        <hr class="block-separator">
+        <br>
+        <hr>
         <h1>Who the hell am I?</h1>
         <div class="display-case-link"><a href="/about.html" style="margin-left: 0;"><p style="margin-top: 0; font-size: 20px;">About me here!</p></a></div>
       </main>
