--- a/portfolio-posts/master-material/material-works.html
+++ b/portfolio-posts/master-material/material-works.html
@@ -33,6 +33,7 @@
         <a class="navigation" href="/index.html">Home</a>
         <a class="navigation active-nav" href="/portfolio-posts/portfolio.html">Portfolio</a>
         <a class="navigation" href="/personal-projects/personal-projects.html">Personal Projects</a>
+        <a class="navigation" href="/artworks.html">Artworks</a>
         <a class="navigation" href="/about.html">About Me</a>
       </nav>
     </header>
@@ -547,8 +548,9 @@
       
         <script>initComparisons()</script>
       </article>
-
-      <hr class="block-separator">
+      
+      <br>
+      <hr>
       <h3 id="credits">Credits</h3>
       <div class="credits">
         <p>"Concrete Bollard Scan 01 | Retopologized"<br> 
