--- a/portfolio-posts/portfolio.html
+++ b/portfolio-posts/portfolio.html
@@ -29,6 +29,7 @@
         <a class="navigation" href="/index.html">Home</a>
         <a class="navigation active-nav" href="/portfolio-posts/portfolio.html">Portfolio</a>
         <a class="navigation" href="/personal-projects/personal-projects.html">Personal Projects</a>
+        <a class="navigation" href="/artworks.html">Artworks</a>
         <a class="navigation" href="/about.html">About Me</a>
       </nav>
 </header>
