changing a bit the text formatting to try and fix display cases display

--- a/artworks.html
+++ b/artworks.html
@@ -46,7 +46,7 @@
           <a href="https://www.artstation.com/artwork/lxX05V" target="_blank">
             <div>
               <video src="/art-images/RV-logo-animation.webm" autoplay loop muted alt="My profile avatar work"></video>
-              <p>An initials art which I use for my social medit profile avatar everywhere</p>
+              <p>An initials art which I use for my social medit profile avatar<br> everywhere</p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
               <p><span>17.01.2021</span></p>
@@ -66,7 +66,7 @@
             <div>
               <img src="/art-images/heavy-napalm-cannon.webp"
                 alt="Art of a heavy weapon which spits a mix of napalm and buckshot">
-              <p>Attempt at a more "stylized" heavy weapon, somewhat inspired by TF2 style and hot rod cars</p>
+              <p>Attempt at a more "stylized" heavy weapon, somewhat inspired<br> by TF2 style and hot rod cars</p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
               <p><span>30.10.2019</span></p>
@@ -75,8 +75,9 @@
           <a href="https://www.artstation.com/artwork/VdvZ65" target="_blank">
             <div>
               <img src="/art-images/cleaver-animation.webp" alt="Animation of an expanding sci-fi knife">
-              <p>First attempt to make something more "textured" and animated, and I like the idea of a knife which
-                expands into a sword (even if this one ended up being more of a cleaver)</p>
+              <p>First attempt to make something more "textured" and animated,<br>
+                and I like the idea of a knife which expands into a sword<br> 
+                (even if this one ended up being more of a cleaver)</p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
               <p><span>18.10.2019</span></p>
@@ -85,7 +86,8 @@
           <a href="https://www.artstation.com/artwork/Z5xD2x" target="_blank">
             <div>
               <img src="/art-images/lever-action-rifle.webp" alt="Art of a lever action rifle">
-              <p>Wanted to model a rifle, don't remember why I decided on level action specifically, just probably
+              <p>Wanted to model a rifle, don't remember why I <br>
+                decided on level action specifically, just probably<br>
                 thought it was cool</p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
@@ -96,8 +98,8 @@
             <div>
               <img src="/art-images/battle-axe.webp"
                 alt="Art of a battle axe standing upside down on a stand, with a pattern on it">
-              <p>Second ever 3D art made in blender, mostly just practicing more, and attempting to add a pattern
-                texture on it</p>
+              <p>Second ever 3D art made in blender, mostly just practicing,<br> 
+                and attempting to add a pattern texture on it</p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
               <p><span>13.04.2019</span></p>
@@ -106,8 +108,8 @@
           <a href="https://www.artstation.com/artwork/3oa55Y" target="_blank">
             <div>
               <img src="/art-images/art-of-smithery.webp" alt="Art of a freshly made sword on an anvil">
-              <p>My first ever 3D art made in Blender, IIRC I made that anvil by following a popular, at the time,
-                tutorial</p>
+              <p>My first ever 3D art made in Blender, IIRC I made that anvil<br>
+                by following a popular, at the time, tutorial</p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
               <p><span>30.03.2019</span></p>
