a bit more formatting changes

--- a/artworks.html
+++ b/artworks.html
@@ -41,7 +41,7 @@
       <hr>
       <br>
       <section class="content-block">
-        <h1 style="padding-left: 10px;">My old (4+ years old) art, which I just felt like having here<br> (more recent ones first)</h1>
+        <h1 style="padding-left: 10px;">My old (4+ years old) art, which I just felt like having here<br> (most to least recent, all link to full posts on artstation)</h1>
         <div class="display-case">
           <a href="https://www.artstation.com/artwork/lxX05V" target="_blank">
             <div>
@@ -56,7 +56,8 @@
             <div>
               <img src="/art-images/lost-in-the-dungeon.webp"
                 alt="Art of a guy lost in a dungeon, with some entitity stalking him from the shadows">
-              <p>A first environment piece I tried to do</p>
+              <p>A first environment piece I tried to do, I remember liking<br>
+                how it came out back then, wanted to do a "twist" in it</p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
               <p><span>30.06.2020</span></p>
@@ -99,7 +100,7 @@
               <img src="/art-images/battle-axe.webp"
                 alt="Art of a battle axe standing upside down on a stand, with a pattern on it">
               <p>Second ever 3D art made in blender, mostly just practicing,<br> 
-                and attempting to add a pattern texture on it</p>
+                and attempting to add a pattern texture on it<br></p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
               <p><span>13.04.2019</span></p>
