more styles update, hopefully last ones (fixing video for mobile screens, changing sizes for the <1100px screens)

--- a/artworks.html
+++ b/artworks.html
@@ -100,7 +100,8 @@
               <img src="/art-images/battle-axe.webp"
                 alt="Art of a battle axe standing upside down on a stand, with a pattern on it">
               <p>Second ever 3D art made in blender, mostly just practicing,<br> 
-                and attempting to add a pattern texture on it<br></p>
+                and attempting to add a pattern texture on it,<br>
+                remember hoping it would come out better</p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
               <p><span>13.04.2019</span></p>
