--- a/artworks.html
+++ b/artworks.html
@@ -46,7 +46,7 @@
           <a href="https://www.artstation.com/artwork/lxX05V" target="_blank">
             <div>
               <video src="/art-images/RV-logo-animation.webm" autoplay loop muted alt="My profile avatar work"></video>
-              <p>An initials art which I use for my social medit profile avatar<br> everywhere</p>
+              <p>An initials art which I use for my social media profile avatar<br> everywhere</p>
               <hr>
               <p style="float: left; padding-right: 5px;"><span>Old Art</span></p>
               <p><span>17.01.2021</span></p>
