--- a/portfolio-posts/portfolio.html
+++ b/portfolio-posts/portfolio.html
@@ -36,7 +36,7 @@
 <main class="content-panel">
         <!-- MAIN PAGE BODY - here go any post I wanna make-->
         <section class="content-block">
-          <h1 style="padding-left: 10px;">My TechArt portfolio works</h1>
+          <h1 style="padding-left: 10px;">My TechArt portfolio works<br> (currently a couple more works are in progress)</h1>
           <div class="display-case">
             <a href="/portfolio-posts/master-material/material-works.html">
               <div>
