Small tweaks to fonts, full redesign of the portfolio page

--- a/portfolio-posts/master-material/material-works.html
+++ b/portfolio-posts/master-material/material-works.html
@@ -474,7 +474,7 @@
         <p class="article-paragraph">Final look of how traffic light functions:</p>
         <div class="image-format">
           <!-- The Modal 25 (hacking in a video)-->
-          <img class="article-img" src="thumbnails/28_traffic_light_thumbnail.webp" alt="Video of a traffic light working">
+          <video class="article-img" src="full-quality/28_working_traffic_light.webm" autoplay loop muted alt="Video of a traffic light working"></video>
           <div class="modal-panel">
             <video class="article-img-full" preload="metadata" autoplay loop muted></video>
             <span class="close">&times;</span>
