forgor empty style block

--- a/portfolio-posts/portfolio.html
+++ b/portfolio-posts/portfolio.html
@@ -38,7 +38,7 @@
         <h1 style="padding-left: 10px; font-size: 40px;">Experience and my works</h1>
         <section class="content-block">
           <h1 style="padding-left: 10px; font-size: 32px;">Work Experience, Released and Unreleased Titles</h1>
-          <div class="image-format" style="">
+          <div class="image-format">
             <img class="article-img" style="object-fit: contain; max-height: 16vw; width:auto; margin-left: 3vw; cursor: default;" src="images/outriders_newhorizon.webp">
             <img class="article-img" style="object-fit: contain; max-height: 16vw; width:auto; margin-left: 10px; cursor: default;" src="images/outriders_worldslayer.webp">
             <img class="article-img" style="object-fit: contain; max-height: 16vw; width:auto; margin-left: 10px; cursor: default;" src="images/nda_placeholder.webp">
