--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
           <article>
             <h2>Where you can find me on the nets:</h2>
             <ul id="social-media-links" style="text-indent: 10px; font-size: 16px; list-style-type: none;">
-              <li><a href="https://bsky.app/profile/reptilianvladeoz.bsky.social" target="_blank">BlueSky</a> profile</li>
+              <li><a href="https://bsky.app/profile/vladeoz.reptilian.games" target="_blank">BlueSky</a> profile</li>
               <li><a href="mailto:reptilian.vladeoz@reptilian.games" target="_blank">E-Mail</a> if you don't feel like using DMs on social media (or have a business inquiry)</li>
               <li><a href="https://ko-fi.com/reptvlad" target="_blank">Ko-fi</a> - I would always appreciate a donation, if you like what I do!</li>
               <li><a href="https://www.artstation.com/reptvlad" target="_blank">ArtStation</a> profile (mostly just old works in there)</li>
@@ -78,3 +78,4 @@
     </div>
   </body>
 </html> 
+
